tests/spec/compile-fail/045_try_option_in_result.zn
// category: compile-fail
// profile: freestanding
// purpose: try does not implicitly convert Option into Result

module tests.fail.tryOptionInResult;

import core.option.Option;
import core.result.{Result, Ok};

enum ParseError {
    OutOfRange,
}

fn bad(value: U32) -> Result<U8, ParseError> {
    val byte = try U8.fromChecked(value); // expected-error: try on Option in Result function requires explicit okOr or okOrElse
    return Ok(byte);
}
